--- a/template/src/kpmp-base.scss
+++ b/template/src/kpmp-base.scss
@@ -1,4 +1,4 @@
-@import "../../node_modules/kpmp-common-styles/common-values.scss";
+@import "../node_modules/kpmp-common-styles/common-values.scss";
 
 body {
 	font-size: 14px;
