--- a/template/src/kpmp-base.scss
+++ b/template/src/kpmp-base.scss
@@ -64,6 +64,34 @@ body {
 	}
 }
 
+#not-found-page {
+  padding: 20px;
+  background-color: $kpmp-gray;
+
+  .not-found-image {
+    max-width: 90%;
+    margin-top: 30px;
+    margin-right: 40px;
+  }
+
+  .not-found-container {
+    max-width: 60%;
+    margin: auto;
+  }
+
+  .not-found-text {
+    padding-top: 30px;
+
+    .not-found-regular {
+      font-size: 32px;
+    }
+
+    .not-found-small {
+      font-size: 24px;
+    }
+  }
+}
+
 #oops-content {
 
 	margin-top: 150px;
